# Neural-Networks-Zero-to-Hero

./: README.md
NNZ2H/: Manifest.toml  micrograd.jl
bigram/: explicit_model.ipynb
bigram/.ipynb_checkpoints/: explicit_model-checkpoint.ipynb  neural_networks-checkpoint.ipynb
micrograd.jl/: micrograd.jl
pytorch/: pyproject.toml
pytorch/01_bigram/: explicit_model.ipynb
pytorch/01_bigram/.ipynb_checkpoints/: neural_networks-checkpoint.ipynb
pytorch/02_MLP/.ipynb_checkpoints/: MLP-checkpoint.ipynb
