[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Jeremy E Kozdon <jeremy@kozdon.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
torch = "^2.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
